# sfm-plus

./: .gitignore  Cargo.toml  README.md  Rocket.toml  info.py  requirements.txt  server.py  sfm_lines_stations.json  split.py  test_runner.sh
.github/workflows/: create-release.yml
src/: main.rs  provider_emt.rs  provider_sfm.rs  train_info.rs  types.rs
static/: manifest.json  stations.js  stops.js  style.css  table.js  view.html
static/stops/: emt.js  sfm.js
test/: consell.json  inter.json  inter_2.json  inter_3.json  inter_4.json  inter_5.json  jacint.json  son_cladera.json  uib.json
