[package]
name = "sfm-plus"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rusty-tesseract = "1.1.7"
ureq = "2.7.1"
image = "0.24.7"
opencv = "0.84.5"
regex = "1.9.5"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
