[package]
name = "sfm-plus"
version = "0.2.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
ureq = { version = "2.7.1", features = ["json"] }
regex = "1.9.5"
phf = { version = "0.11.2", features = ["macros"] }
chrono = "0.4.29"
rayon = "1.7.0"
rust_socketio = "0.6.0"
chrono-tz = "0.10.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
